frontend workplace update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,8 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     "jsxImportSource": "vue",
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true
   },
   "include": ["src/**/*", "src/**/*.vue"],
   "exclude": ["node_modules"]
