--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "vite --config ./config/vite.config.dev.ts",
     "build": "vue-tsc --noEmit --skipLibCheck && vite build --config ./config/vite.config.prod.ts",
+    "build:pro": "vite build --mode production",
     "lint-staged": "npx lint-staged",
     "prepare": "husky install",
     "build:normal": "vite build --config ./config/vite.config.prod.ts",
