--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -1,17 +1,17 @@
 {
-  "theme": "light",
+  "theme": "dark",
   "colorWeak": false,
   "navbar": true,
   "menu": true,
   "topMenu": false,
   "hideMenu": false,
   "menuCollapse": false,
-  "footer": true,
+  "footer": false,
   "themeColor": "#165DFF",
   "menuWidth": 220,
   "globalSettings": false,
   "device": "desktop",
-  "tabBar": true,
+  "tabBar": false,
   "menuFromServer": false,
   "serverMenu": []
 }
